use col to fix extra spacing in md size

--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ body a:visited {
 .xyz {
   box-sizing: border-box;
   border: 3px solid transparent;
-  background-clip:padding-box;
+  background-clip: padding-box;
 }
 
 /* Top Musics */
@@ -244,7 +244,7 @@ body a:visited {
   margin: 5px auto;
 }
 
-/* Right Sidebar */
+/* Left Sidebar */
 
 .sidebar .list {
   margin-right: -17px;
@@ -276,9 +276,9 @@ body a:visited {
   margin-left: 10px;
 }
 
-/* Left Sidebar */
+/* Right Sidebar */
 
-.sidebar-left .banner {
+.sidebar-right .banner {
   display: inline-block;
   margin: 5px 0;
   max-width: 49%;
@@ -366,6 +366,10 @@ body a:visited {
 
 #pills-tab {
   justify-content: center;
+}
+
+#pills-tab-content ul {
+  text-align: center;
 }
 
 /* Posts(Center Sidebar) */
